# zeabur_axum_crash_test

./: Cargo.toml
src/: main.rs
